fix: close acnt btn alignment

--- a/packages/components/src/components/select-native/select-native.scss
+++ b/packages/components/src/components/select-native/select-native.scss
@@ -56,7 +56,7 @@
         padding-left: 1.2rem;
 
         @include tablet-screen {
-            max-width: 568px;
+            max-width: 568rem;
         }
 
         &-text {
